syntax = "proto2";
import "scalapb/scalapb.proto";
option(scalapb.options) = {
    flat_package: true
};

package com.wincom.dcim.message.common;

enum ResponseType {
    option(scalapb.enum_options).extends = "com.wincom.dcim.message.common.ValueObject";
    SUCCESS = 0;
    NOT_EXIST = 1;
    ALREADY_EXISTS = 2;
    NOT_AVAILABLE = 3;
    BAD_COMMAND = 4;
};

